--- a/nice.html
+++ b/nice.html
@@ -1,6 +1,6 @@
 <HTML>
 	<HEAD>
-		<TITLE>กัลยา</TITLE>
+		<TITLE>กัลยา กวดขันธ์</TITLE>
 	</HEAD>
 	<BODY>
 		<CENTER>
@@ -8,9 +8,6 @@
 		</CENTER>
 		<CENTER>
 			<img src="./pic/n.jpg"/>
-		</CENTER>
-		<CENTER>
-			<A HREF='./nice.html' terget='_blank'>กัลยา กวดขันธ์</a>
 		</CENTER>
 	</BODY>
 </HTML>
